retrieve_ENO_DEV1/objects/Cast_Member__c.object
<CustomObject>
    <description>Related to both a Run (of a production) and a performer, this object determines who plays what role in the run.</description>
    <fields>
        <fullName>Always_Show_On_Call_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, even when the full Cast is selected it will still show this performer as an addition to the full cast.</inlineHelpText>
        <label>Always Show On Call Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cast_Cover__c</fullName>
        <label>Cast/Cover</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cast A</fullName>
                </value>
                <value>
                    <fullName>Cast B</fullName>
                </value>
                <value>
                    <fullName>Cast C</fullName>
                </value>
                <value>
                    <fullName>Cast D</fullName>
                </value>
                <value>
                    <fullName>Cover</fullName>
                </value>
                <value>
                    <fullName>Creative Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <description>Fee for this cast member in this role</description>
        <label>Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Performer_Role__c</fullName>
        <formula>TEXT( Performer__r.Role__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performer Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performer</label>
        <referenceTo>Performer__c</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <description>Name of the Production</description>
        <formula>Run__r.Production__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run__c</fullName>
        <label>Run</label>
        <referenceTo>Run__c</referenceTo>
        <relationshipLabel>Cast Members</relationshipLabel>
        <relationshipName>Cast_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <description>Season of the run (production)</description>
        <formula>TEXT( Run__r.Season__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Season</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voice_Type__c</fullName>
        <label>Voice Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Voice_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Cast Member</label>
    <nameField>
        <label>Cast Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cast Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>